--- a/FreightBKShippingWebApp/Components/Pages/JOBpage/JobAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/JOBpage/JobAddEditPage.razor
@@ -37,7 +37,7 @@ MaxWidth="1150px" Width="90%">
             </DxFormLayoutItem>
 
             <DxFormLayoutItem Caption="Job Date" ColSpanMd="4">
-                <DxDateEdit @bind-Date="EditModel.JobDate" DisplayFormat="dd/MM/yyyy" />
+                <DxDateEdit @bind-Date="EditModel.JobDate" Format="dd-MM-yyyy" />
             </DxFormLayoutItem>
 
             <DxFormLayoutTabPages>
