--- a/FreightBKShippingWebApp/Components/Pages/RateMasterpage/RateMasterAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/RateMasterpage/RateMasterAddEditPage.razor
@@ -13,8 +13,8 @@
             <ValidationSummary />
 
             <DxFormLayout>
-                <DxFormLayoutItem Caption="Applicable Date" ColSpanMd="12">
-                    <DxDateEdit @bind-Date="EditModel.RateMasterApplicableDt" />
+                <DxFormLayoutItem Caption="Applicable Date" ColSpanMd="12" Format="dd-MM-yyyy">
+                    <DxDateEdit @bind-Date="EditModel.RateMasterApplicableDt" Format="dd-MM-yyyy" />
                 </DxFormLayoutItem>
 
                 <DxFormLayoutItem Caption="Party" ColSpanMd="12">
