--- a/FreightBKShippingWebApp/Components/Pages/VesselPage/VesselAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/VesselPage/VesselAddEditPage.razor
@@ -18,7 +18,7 @@
 
             <DxFormLayoutItem Caption="ETA">
                 <ChildContent>
-                    <DxDateEdit @bind-Date="EditModel.VesselEta" />
+                    <DxDateEdit @bind-Date="EditModel.VesselEta" Format="dd-MM-yyyy" />
                 </ChildContent>
             </DxFormLayoutItem>
             <DxFormLayoutItem Caption="Qty Opening">
@@ -28,7 +28,7 @@
             </DxFormLayoutItem>
             <DxFormLayoutItem Caption="ATA">
                 <ChildContent>
-                    <DxDateEdit @bind-Date="EditModel.VesselAta" />
+                    <DxDateEdit @bind-Date="EditModel.VesselAta" Format="dd-MM-yyyy" />
                 </ChildContent>
             </DxFormLayoutItem>
             <DxFormLayoutItem Caption="CBM Opening">
@@ -38,7 +38,7 @@
             </DxFormLayoutItem>
             <DxFormLayoutItem Caption="EDT">
                 <ChildContent>
-                    <DxDateEdit @bind-Date="EditModel.VesselEdt" />
+                    <DxDateEdit @bind-Date="EditModel.VesselEdt" Format="dd-MM-yyyy" />
                 </ChildContent>
             </DxFormLayoutItem>
             <DxFormLayoutItem Caption="No. of BL Opening">
@@ -48,7 +48,7 @@
             </DxFormLayoutItem>
             <DxFormLayoutItem Caption="Sailing Date">
                 <ChildContent>
-                    <DxDateEdit @bind-Date="EditModel.VesselDtSailing" />
+                    <DxDateEdit @bind-Date="EditModel.VesselDtSailing" Format="dd-MM-yyyy" />
                 </ChildContent>
             </DxFormLayoutItem>
             <DxFormLayoutItem Caption="Total Qty">
@@ -58,7 +58,7 @@
             </DxFormLayoutItem>
             <DxFormLayoutItem Caption="Berting Date">
                 <ChildContent>
-                    <DxDateEdit @bind-Date="EditModel.VesselDtBerting" />
+                    <DxDateEdit @bind-Date="EditModel.VesselDtBerting" Format="dd-MM-yyyy" />
                 </ChildContent>
             </DxFormLayoutItem>
             <DxFormLayoutItem Caption="Total CBM">
@@ -68,7 +68,7 @@
             </DxFormLayoutItem>
             <DxFormLayoutItem Caption="Demmurate Date">
                 <ChildContent>
-                    <DxDateEdit @bind-Date="EditModel.VesselDtDemmurate" />
+                    <DxDateEdit @bind-Date="EditModel.VesselDtDemmurate" Format="dd-MM-yyyy" />
                 </ChildContent>
             </DxFormLayoutItem>
             <DxFormLayoutItem Caption="No. of BL">
