--- a/FreightBKShippingWebApp/Components/Pages/YearPage/YearAddEditPage.razor
+++ b/FreightBKShippingWebApp/Components/Pages/YearPage/YearAddEditPage.razor
@@ -18,13 +18,13 @@
 
             <DxFormLayoutItem Caption="From Date">
                 <ChildContent Context="ctx">
-                    <DxDateEdit @bind-Date="EditModel.YearDateFrom" Format="yyyy-MM-dd" />
+                    <DxDateEdit @bind-Date="EditModel.YearDateFrom" Format="dd-MM-yyyy" />
                 </ChildContent>
             </DxFormLayoutItem>
 
             <DxFormLayoutItem Caption="To Date">
                 <ChildContent Context="ctx">
-                    <DxDateEdit @bind-Date="EditModel.YearDateTo" Format="yyyy-MM-dd" />
+                    <DxDateEdit @bind-Date="EditModel.YearDateTo" Format="dd-MM-yyyy" />
                 </ChildContent>
             </DxFormLayoutItem>
 
